--- a/src/main/java/application/Gui.fxml
+++ b/src/main/java/application/Gui.fxml
@@ -6,6 +6,6 @@
 
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="application.GuiControl">
    <center>
-      <Button mnemonicParsing="false" onAction="#sayHello" text="BUTTTOOOOONNN!!!" BorderPane.alignment="CENTER" />
+      <Button mnemonicParsing="false" text="BUTTTOOOOONNN!!!" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
