--- a/src/main/java/application/Sample.fxml
+++ b/src/main/java/application/Sample.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="519.0" prefWidth="711.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
+<AnchorPane prefHeight="642.0" prefWidth="711.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <children>
-      <VBox prefHeight="320.0" prefWidth="460.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox prefHeight="642.0" prefWidth="711.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox prefHeight="320.0" prefWidth="460.0">
                <children>
@@ -67,10 +67,10 @@
                         </HBox>
                      </children>
                   </VBox>
-                  <Button mnemonicParsing="false" onMouseClicked="#next" text="Go" />
+                  <Button fx:id="go" mnemonicParsing="false" onMouseClicked="#next" text="Go" />
                </children>
             </HBox>
-            <TextArea fx:id="textymexty" editable="false" prefHeight="200.0" prefWidth="200.0" />
+            <TextArea fx:id="textymexty" editable="false" prefHeight="324.0" prefWidth="711.0" />
          </children>
       </VBox>
    </children>
