--- a/src/main/resources/Sample.fxml
+++ b/src/main/resources/Sample.fxml
@@ -1,25 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <AnchorPane prefHeight="642.0" prefWidth="711.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <children>
       <VBox prefHeight="642.0" prefWidth="711.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox prefHeight="320.0" prefWidth="460.0">
+            <HBox prefHeight="382.0" prefWidth="711.0">
                <children>
-                  <TableView fx:id="table" onContextMenuRequested="#checkMenuItems" prefHeight="319.0" prefWidth="442.0">
+                  <TableView fx:id="table" onContextMenuRequested="#checkMenuItems" prefHeight="382.0" prefWidth="490.0">
                     <columns>
                       <TableColumn fx:id="assignment" prefWidth="95.0" text="Assignment" />
                         <TableColumn fx:id="hasWep" prefWidth="67.0" text="Weapon" />
@@ -70,7 +59,7 @@
                   <Button fx:id="go" mnemonicParsing="false" onMouseClicked="#next" text="Go" />
                </children>
             </HBox>
-            <TextArea fx:id="textymexty" editable="false" prefHeight="324.0" prefWidth="711.0" />
+            <TextArea fx:id="textymexty" editable="false" prefHeight="261.0" prefWidth="711.0" />
          </children>
       </VBox>
    </children>
